<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">



    <fragment
        android:id="@+id/navigation_recommend"
        android:name="com.example.tugascapstonepasa.ui.recommend.RecommendFragment"
        android:label="@string/title_recommend"
        tools:layout="@layout/fragment_recommend" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tugascapstonepasa.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.example.tugascapstonepasa.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.tugascapstonepasa.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>